# py-web-10

quotes_project/: .gitignore  import_data.py  pyproject.toml
quotes_project/quotes/: forms.py  models.py  urls.py  views.py
quotes_project/quotes/migrations/: 0001_initial.py  0002_tag_remove_quote_tags_quote_tags.py
quotes_project/quotes/templates/quotes/: add_author.html  add_quote.html  author_detail.html  index.html  quotes_by_tag.html
quotes_project/quotes/utils/: scraper.py
quotes_project/quotes_site/: settings.py  urls.py
quotes_project/templates/: base.html
quotes_project/users/: forms.py  urls.py  views.py
quotes_project/users/templates/users/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  register.html
